
1.1.1 - Aug 7 2001 - Hessu
	
	Added error detection while reading the bin file. Patch from
	Oskar Liljeblad <osk@hem.passagen.se>, forwarded from the
	debian bug tracking system by Sam Powers <sam@oddbox.org>.
	
	psxtruncate was always enabled, thanks for the report go to
	Patrik Weiskircher <pat@icore.at>.
	
	Christian W. Zuckschwerdt <zany@triq.net> provided a fix for the
	.spec file - replaced hardcoded paths with macros so that the
	package will build on other distributions too.

1.2.0 - Jun 29 2004 - Hessu

	Included a man page patch from the openbsd port of bchunk (adding
	a note about ISO/VCD), and s/ISO9110/ISO9660/. The changes were
	for openbsd by Dave Watson <dave@elephantride.org>.
	
	Patch from Matthew Green <mrg@eterna.com.au> for a new option
	-r, which makes binchunker output MODE2/2352 tracks in raw format,
	from offset 0 for 2352 bytes.

1.2.1 - skipped due to CVE items referring to a fork using this version

1.2.2 - Nov 14 2017 - Hessu

	Fixes CVE-2017-15953, a heap-based buffer overflow.
	Fix provided by Yegor Timoshenko.

	Fixes CVE-2017-15955, Access violation near NULL on destination
	operand and crash when processing a malformed CUE (.cue) file.
	Fix provided by Yegor Timoshenko.

	Fix wrong track size calculation when having multiple tracks in
	one image. (Closes debian bug: #261274).
	Fix provided by Piotr Kaczuba.

	Clarify manual page for input/output file types
	Improvement from Reuben Thomas, debian bug: #503151

1.2.3 - Jun 30 2022 - twojstaryzdomu

	Added support for track # and multiple bin FILEs in cue sheet.
	The output files are now named after the FILE with the appropriate
	output extension added, without a track # inserted in between the
	basename and the extension. The -t option includes the track # in
	the output filenames as done by default in earlier releases.

	Sealed various memory leaks. Refactored exit statements.

	Abort further processing if output file already exists.