@@ -1,9 +1,10 @@
 .TH BCHUNK 1 "v1.2.3 30 Jun 2022" "Heikki Hannikainen"
 .SH NAME
 bchunk \- CD image format conversion from bin/cue to iso/cdr
+and WAV file splitter
 .SH SYNOPSIS
 .B bchunk [-t] [-v] [-p] [-r] [-w] [-s]
-<image.bin | track # | '*'> <image.cue> [ <basename> ]
+<image.bin | image.wav | track # | '*'> <image.cue> [ <basename> ]
 .SH DESCRIPTION
 .LP
 .B bchunk 
@@ -14,13 +15,18 @@ The bin/cue format is used by some non-Unix cd-writing
 software, but is not supported on most other cd-writing
 programs.
 .LP
-image.bin is a raw cd image file listed in the cue sheet as a FILE.
+It also allows to split uncompressed PCM audio files in the
+WAV format into individual tracks.
+.LP
+image.bin is a raw cd image file and image.wav is an uncompressed
+PCM audio file, either listed in the cue sheet file as a FILE.
 track # is the track number listed in the cue sheet as a TRACK.
 track # may omit the leading 0s. The wildcard '*' (single quoted to
 prevent shell expansion) selects all tracks from a cue sheet for
 conversion. image.cue is the cue sheet file containing track types
 and offsets. basename is optionally used for the leading part of
-output filenames.
+output filenames. basename may contain the track token '##'
+which will be replaced by the track number.
 .LP
 The produced .iso track contains an ISO file system, which can be
 mounted through a loop device on Linux systems, or
@@ -72,6 +78,10 @@ raw format.
 .TP 5
 .B image.bin
 Raw CD image file, listed in the cue sheet as a FILE.
+.TP 5
+.B image.wav
+WAV file with uncompressed PCM audio, listed in the cue sheet
+as a FILE.
 .TP 5
 .B image.cue
 Cue sheet, TOC (Track index, Table Of Contents) file.
